--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress:open": "cypress open"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.0",
-    "@testing-library/react": "^9.3.0"
+    "@testing-library/react": "^9.3.0",
+    "cypress": "^3.5.0"
   }
 }
